@@ -453,7 +453,7 @@ abstract class LBFactory implements ILBFactory {
 			if (
 				// No writes to wait on getting replicated
 				!$lb->hasMasterConnection() ||
-				// No replication; avoid getMasterPos() permissions errors (T29975)
+				// No replication; avoid getPrimaryPos() permissions errors (T29975)
 				!$lb->hasStreamingReplicaServers() ||
 				// No writes since the last replication wait
 				(
@@ -464,7 +464,7 @@ abstract class LBFactory implements ILBFactory {
 				continue; // no need to wait
 			}
 
-			$masterPositions[$i] = $lb->getMasterPos();
+			$masterPositions[$i] = $lb->getPrimaryPos();
 		}
 
 		// Run any listener callbacks *after* getting the DB positions. The more
@@ -476,7 +476,7 @@ abstract class LBFactory implements ILBFactory {
 		$failed = [];
 		foreach ( $lbs as $i => $lb ) {
 			if ( $masterPositions[$i] ) {
-				// The RDBMS may not support getMasterPos()
+				// The RDBMS may not support getPrimaryPos()
 				if ( !$lb->waitForAll( $masterPositions[$i], $opts['timeout'] ) ) {
 					$failed[] = $lb->getServerName( $lb->getWriterIndex() );
 				}
